[package]
name = "packet_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.8"

serde = { version = "1.0.216", features = ["derive"] }
uuid = "1.11.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pnet = "0.35.0"
hex = "0.4.3"

[[bench]]
name = "parsed_packet_benchmark"
harness = false