[package]
name = "packet_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
pcap-file = "2.0.0"
serde = { version = "1.0.217", features = ["derive"] }
uuid = "1.12.1"
chrono = "0.4.39" # for ntp timestamp

hex = "0.4.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pnet = "0.35.0"
hex = "0.4.3"

[[bench]]
name = "parsed_packet_benchmark"
harness = false