[package]
name = "packet_parser"
version = "0.5.2"
edition = "2024"
authors = ["Cyprien Avico avicocyprien@yahoo.com"]
description = "A powerful and modular Rust crate for network packet parsing."
license = "MIT"
repository = "https://github.com/Akmot9/Packet-parser"
categories = ["network-programming", "parsing", "development-tools"]
readme = "README.md"
homepage = "https://github.com/Akmot9/Packet-parser"
keywords = ["network", "packets", "parser", "cybersecurity", "Rust"]
exclude = [".github/", ".gitignore", "tests/", "benches/"]


[dependencies]
thiserror = "2.0.12"
pcap-file = "2.0.0"
serde = { version = "1.0.217", features = ["derive"] }
uuid = "1.17.0"
chrono = "0.4.39" # for ntp timestamp
aquamarine = "0.6.0"
hex = "0.4.3"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
pnet = "0.35.0"
hex = "0.4.3"

[workspace]
members = ["integration_test"] # Spécifie que ta crate a un workspace avec d'autres projets

[profile.release]
lto = "fat"          # Optimisation maximale de la taille binaire et des performances
codegen-units = 1    # Compilation optimisée pour la performance (au détriment du temps de build)
panic = "abort"      # Supprime le support du backtrace, réduit la taille binaire
strip = true         # Supprime les symboles de debug pour réduire la taille binaire
opt-level = "z"      # Optimisation pour la taille (`s` pour équilibrer, `z` pour minimiser)
