[package]
name = "benchmark_db"
version = "1.0.0"
edition = "2024"

[features]
# Par défaut, le bench log aussi les timings OSI
default = ["parse_timing"]
# Active parse_timing sur benchmark_db + la dépendance packet_parser
parse_timing = ["packet_parser/parse_timing"]

[dependencies]
thiserror = "2.0.17"
pcap = "2.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

packet_parser = { path = "../" }

blake3 = "1.6.0"
hostname = "0.4.2"
chrono = "0.4.42"
