[package]
name = "packet_parser-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.packet_parser]
path = ".."

[[bin]]
name = "parse_packetflow"
path = "fuzz_targets/parse_packetflow.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_dns"
path = "fuzz_targets/parse_dns.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_application"
path = "fuzz_targets/parse_application.rs"
test = false
doc = false
bench = false
